2006-02-24  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-editable-toolbar.c
	
	Fix a bug where the visibility_paths were deleted on
	deconstruct rather than dispose.

2006-02-24  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-editable-toolbar.c
	
	Made the "Show" menu items insensitive when the entire toolbar
	is hidden.

2006-02-24  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-topics-palette.c
	
	Changed selection mode to 'none'. Makes it more
	usable for mouse users, and we have a text entry
	for keyboard users anyway.

2006-02-23  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-editable-toolbar.c
	
	Added translator comment.

2006-02-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c: (window_cmd_file_close_window),
	(window_cmd_help_about):

	Use the same machanism for Ctrl-W as clicking the tab's
	close button. Fixes bug #319530.

2006-02-23  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:
	
	Added GECKO_CHECK_CONTRACTIDS. Fix variable name quoting in
	GECKO_GECKO_CONTRACTID.

	* configure.ac:
	
	Check with GECKO_CHECK_CONTRACTIDS.
	Remove redundant check for typeaheadfind.

2006-02-23  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:
	
	Refactored. Added GECKO_XPCOM_PROGRAM modelled after AC_LANG_PROGRAM
	but which produces a program which uses	XPCOM; and made
	GECKO_CHECK_CONTRACTID use this.

	* configure.ac:

	Add a check for the gecko typeaheadfind extension. Bug #329118.

2006-02-22  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-topics-entry.c
	
	Improved behaviour of completion popup.

2006-02-22  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-gecko-1-8.js:

	Unset general.useragent.extra.simple pref from xulrunner,
	we don't want that in our UA string.

2006-02-21  Peter Harvey  <peter.a.harvey@gmail.com>

	* data/ui/epiphany-fs-toolbar.xml
	* lib/egg/egg-toolbars-model.c
	* lib/egg/egg-toolbars-model.h
	