@@ -1,5 +1,13 @@
 2006-02-24  Peter Harvey  <peter.a.harvey@gmail.com>
 
+	* src/bookmarks/ephy-bookmark-action.c
+	
+	Update the bookmark icon if the toolbar is reconfigured
+	(happens when the theme changes). Everything else should
+	be already handled by the class handler.
+
+2006-02-24  Peter Harvey  <peter.a.harvey@gmail.com>
+
 	* lib/egg/egg-editable-toolbar.c
 	
 	Fix a bug where the visibility_paths were deleted on
